--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: TheBpendragon
 github_username:  Bpendragon
 
 # Build settings
-theme: minima
+theme: jekyll-theme-dinky
 plugins:
   - jekyll-feed
 
